<?xml version="1.0" encoding="utf-8"?><!--Card view to show the section of welcome  -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_welcome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextSubTitulosBold16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/item_welcome_default_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextButtonsPoppin16sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/img_welcome"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/fragment_home_title_welcome"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextDescripcion12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top|center"
            android:padding="8dp"
            android:singleLine="false"
            android:text="@string/item_welcome_default_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>