<?xml version="1.0" encoding="utf-8"?><!--
Card view to show the section of about us  -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_about_us"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="6dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_member"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:contentDescription="@string/fragment_about_us_title"
            android:elevation="20dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/imageViewRounded"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextSubTitulosBold16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/item_about_us_default_name"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextDescripcion12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:gravity="top|center"
            android:text="@string/item_about_us_default_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

</androidx.cardview.widget.CardView>