<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ContactFragment"
    >

    <!-- include heading with logo -->
    <include
        android:id="@+id/section_header"
        layout="@layout/section_header" />

    <ScrollView
        android:id="@+id/scv_contact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/fragment_contact_title"
                style="@style/TextTitulos24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/fragment_contact_title"
                android:textAppearance="@style/TextTitulos24sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_contact_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_contact_title"
                tools:ignore="MissingConstraints"
                app:startIconDrawable="@drawable/user_icon"
                app:startIconContentDescription="@string/fragment_contact_firstnameHint"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextDescripcion12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_contact_firstnameHint"
                    android:textSize="14sp"
                    android:inputType="text"
                    android:textAppearance="@style/TextDescripcion12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_contact_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_contact_firstname"
                tools:ignore="MissingConstraints"
                app:startIconDrawable="@drawable/user_icon"
                app:startIconContentDescription="@string/fragment_contact_lastnameHint"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextDescripcion12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_contact_lastnameHint"
                    android:textSize="14sp"
                    android:inputType="text"
                    android:textAppearance="@style/TextDescripcion12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_contact_lastname"
                tools:ignore="MissingConstraints"
                app:startIconDrawable="@drawable/mail_icon"
                app:startIconContentDescription="@string/fragment_contact_emailHint"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextDescripcion12sp"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_contact_emailHint"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextDescripcion12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_contact_message"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="start"
                app:startIconDrawable="@drawable/edit_icon"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/fragment_contact_email"
                app:startIconContentDescription="@string/fragment_contact_messageHint"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextDescripcion12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:hint="@string/fragment_contact_messageHint"
                    android:inputType="textMultiLine"
                    android:minLines="2"
                    android:textAppearance="@style/TextDescripcion12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="28dp"
                android:gravity="center"
                android:text="@string/error_message_contact"
                android:textColor="#E91E63"
                android:textSize="24sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/filledButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_contact_message" />

            <Button
                android:id="@+id/filledButton"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/red"
                android:elevation="5dp"
                android:text="@string/fragment_contact_button"
                android:textAlignment="center"
                style="@style/TextButtonsPoppin16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:icon="@drawable/send_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_contact_message" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/progress_loader"
        layout="@layout/view_load_spinner"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>