<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/front_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LogInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_Login_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                android:text="@string/log_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout_email_log_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email_log_in"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="39dp"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout_password_log_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_Login_Title"
                app:startIconContentDescription="@string/fragment_contact_emailHint"
                app:startIconDrawable="@drawable/ic_baseline_mail_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditText_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_contact_emailHint"
                    android:inputType="text"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password_log_in"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="88dp"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/button_log_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email_log_in"
                app:startIconContentDescription="password_login"
                app:startIconDrawable="@drawable/ic_baseline_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditText_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_log_in"
                    android:inputType="text|textPassword"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_log_in"
                android:layout_width="350dp"
                android:layout_height="75dp"
                android:layout_marginBottom="39dp"
                android:backgroundTint="@color/blue"
                android:elevation="5dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password_log_in" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_log_in">

                <Button
                    android:id="@+id/button_facebook_login"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#1877f2"
                    android:text="@string/button_facebook"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:elevation="5dp"
                    app:icon="@drawable/ic_facebook"
                    app:iconPadding="0dp"
                    app:iconSize="30dp"
                    app:iconTint="@color/white" />

                <Button
                    android:id="@+id/button_google_login"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="#F21818"
                    android:text="@string/button_google"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:elevation="5dp"
                    app:icon="@drawable/ic_google"
                    app:iconSize="24dp"
                    app:iconTint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_question_sign_up"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/button_sign_up_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sign_up"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- include loading spinner -->
    <include
        android:id="@+id/progress_loader"
        layout="@layout/view_load_spinner"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>