<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AboutUsFragment">

    <!-- include heading with logo -->
    <include
        android:id="@+id/section_header"
        layout="@layout/section_header" />

    <ScrollView
        android:id="@+id/scv_about_us"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- some descriptive texts -->
            <TextView
                android:id="@+id/tv_about_us_title"
                style="@style/TextTitulos24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center"
                android:text="@string/fragment_about_us_title"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_about_us_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_about_us_description"
                style="@style/TextDescripcion12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center"
                android:text="@string/fragment_about_us_description"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/section_about_us"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_about_us_title" />

            <!-- include section with recycler view -->
            <include
                android:id="@+id/section_about_us"
                layout="@layout/section_about_us"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_about_us_description"
                tools:ignore="ScrollViewSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- include loading spinner -->
    <include
        android:id="@+id/progress_loader"
        layout="@layout/view_load_spinner"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>